ADD: esctructura de projecto

--- a/PORTFOLIO/frontend/src/app/components/project-card/project-card.component.html
+++ b/PORTFOLIO/frontend/src/app/components/project-card/project-card.component.html
@@ -13,7 +13,7 @@
     </small>
   </div>
 
-    <a [routerLink]="['/project', project._id]" class="btn-outline-primary"
+    <a [routerLink]="['/project', project._id]" class="btn btn-outline-primary"
       >Ver más</a
     >
 
