--- a/PORTFOLIO/frontend/src/app/pages/home-page/home-page.component.html
+++ b/PORTFOLIO/frontend/src/app/pages/home-page/home-page.component.html
@@ -3,7 +3,7 @@
     <h1 class="display-4">Bienvenidos</h1>
     <p class="lead">Mi nombre es José Mari Tomé y soy Desarrollador de Aplicaciones Web y Técnico en preimpresión digital.</p>
     <hr class="my-4">
-    <p>Conocimientos en PHP, JavaScript, HTML, CSS, Angular, Laravel, Node.js .</p>
+    <p class="text-muted">Conocimientos en PHP, JavaScript, HTML, CSS, Angular, Laravel, Node.js, Bootstrap, Semantic-UI, Git.</p>
     <a class="btn btn-primary btn-lg" routerLink="/projects" role="button">Ver proyectos</a>
   </div>
   </div>
