--- a/PORTFOLIO/frontend/src/styles.css
+++ b/PORTFOLIO/frontend/src/styles.css
@@ -1,16 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-html {
-  min-height: 100%;
-  position: relative;
-}
-body {
-  margin: 0;
 
-}
-footer {
-
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-
+.space-top{
+  margin-top: 50px;
 }
