--- a/PORTFOLIO/frontend/src/app/shared/navbar/navbar.component.html
+++ b/PORTFOLIO/frontend/src/app/shared/navbar/navbar.component.html
@@ -18,8 +18,19 @@
 
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Tecnología" aria-label="Search">
-      <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Buscar</button>
+      <input
+      class="form-control mr-sm-2"
+      type="search"
+      placeholder="Tecnología"
+      aria-label="Search"
+      #searchQuery
+      (keyup.enter)= "searchTechnology(searchQuery.value)"
+      >
+      <button
+      class="btn btn-outline-light my-2 my-sm-0"
+       type="submit"
+       (click)= "searchTechnology(searchQuery.value)"
+       >Buscar</button>
     </form>
   </div>
 </nav>
